# SAS

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  CTestConfig.cmake  Doxyfile  README  README.md  build-test.sh  build.sh  setup-path-llvm.sh  setup-scanbuild.sh  setup.sh  test.sh
cmake/: FindLLVM.cmake  test.cmake
config/: ROOT-clang-format.yaml
jenkins/: jk-setup.sh  sas-test.cmake
script/: fastjet.sh  geant4.sh  root.sh
scripts/: clang  clang++  clang++.in  clang.in  sasFormattingChecker.py  test.py
scripts/common/: __init__.py  __init__.py.in  clangWrapperUtils.py
src/: ArgSizeChecker.cpp  ArgSizeChecker.h  BlackWhiteListCheckerDisabler.cpp  BlackWhiteListCheckerDisabler.h  CatchAll.cpp  CatchAll.h  CheckerDisabler.cpp  CheckerDisabler.h  ClangCmsCheckerPluginRegister.cpp  ClangSasCheckerPluginRegister.cpp  ClassChecker.cpp  ClassChecker.h  ClassDumper.cpp  ClassDumper.h  CmsException.cpp  CmsException.h  CmsSupport.cpp  CmsSupport.h  CommentCheckerDisabler.cpp  CommentCheckerDisabler.h  ConstCastAwayChecker.cpp  ConstCastAwayChecker.h  ConstCastChecker.cpp  ConstCastChecker.h  DisableChecker.c  DisableChecker.cpp  DisableChecker.h  FiniteMathChecker.cc  FiniteMathChecker.h  GlobalAccInCtorChecker.cpp  GlobalAccInCtorChecker.h  GlobalStaticChecker.cpp  GlobalStaticChecker.h  MutableMemberChecker.cpp  MutableMemberChecker.h  SasChecker.h  SasException.cpp  SasException.h  SasSupport.cpp  SasSupport.h  (+13 more)
src/CodingConventions/General/: Rules.h  StdPrintoutsChecker.cpp  StdPrintoutsChecker.h  UsingNamespace.cpp  UsingNamespace.h
src/CodingConventions/ROOT/: CodingConventionChecker.h  PtrCastWinChecker.cpp  PtrCastWinChecker.h  RN10Checker.cpp  RN10Checker.h  RN11Checker.cpp  RN11Checker.h  RN12Checker.cpp  RN12Checker.h  RN13Checker.cpp  RN13Checker.h  RN3Checker.cpp  RN3Checker.h  RN4Checker.cpp  RN4Checker.h  RN6Checker.cpp  RN6Checker.h  RN9Checker.cpp  RN9Checker.h  RN9FunctionsChecker.cpp  RN9FunctionsChecker.h  RN9part2Checker.cpp  RN9part2Checker.h  RuleNumber3.cpp  RuleNumber3.h  Rules.h
src/Example/: Checkers.h  VarnameChecker.cpp  VarnameChecker.h
src/Performance/: ArgSizeChecker.cpp  ArgSizeChecker.h  Checkers.h  FiniteMathChecker.cpp  FiniteMathChecker.h
src/ThreadSafety/: Checkers.h  ConstCastAwayChecker.cpp  ConstCastAwayChecker.h  ConstCastChecker.cpp  ConstCastChecker.h  GlobalStaticChecker.cpp  GlobalStaticChecker.h  MutableMemberChecker.cpp  MutableMemberChecker.h  StaticLocalChecker.cpp  StaticLocalChecker.h
test/: Makefile  checkerdisabler.cpp  checkerdisabler.h  class_checker.cpp  comment_checker_disabler.cpp  comment_checker_disabler.h  comment_checker_disabler.ref  const_cast.cpp  const_cast_away.cpp  finitemath.c  format.cpp  format.ref  global_static_edm.cpp  globalaccinctor.cpp  loop_convert.cpp  loop_convert.ref  mutable_member.cpp  usingnamespace.cpp  usingnamespace.h  varname-localdisable.c  varname.c
test/BWList/Class/: .sas.json  .sas.yaml
test/BWList/Class/BlackList/: match.cpp
test/BWList/FilePath/: .sas.json  .sas.yaml
test/BWList/FilePath/BlackList/: match.ref  unmatch.ref
test/BWList/FilePath/WhiteList/: match.ref  unmatch.cpp  unmatch.ref
test/BWList/Misc/: configuration.json  configuration.yaml  match.cpp
test/BWList/Namespace/: .sas.json  .sas.yaml
test/BWList/Namespace/BlackList/: match.cpp  match.ref
test/BWList/Namespace/WhiteList/: match.ref
test/BWList/Struct/: .sas.json  .sas.yaml
test/BWList/Struct/BlackList/: match.ref
test/BWList/Struct/WhiteList/: match.cpp  match.ref
test/CodingConventions/General/: std_printouts.cpp  std_printouts.ref  using_namespace.cpp  using_namespace.h  using_namespace.ref
test/CodingConventions/ROOT/: RN10.cpp  RN10.ref  RN11.cpp  RN11.ref  RN12.cpp  RN12.ref  RN3.cpp  RN3.ref  RN4.cpp  RN4.ref  RN6.cpp  RN6.ref  RN9.cpp  RN9.ref  allRN.cpp  ptr_cast_win.cpp  ptr_cast_win.ref
test/Example/: varname.ref
test/Performance/: arg_size.cpp  arg_size.ref  finite_math.cpp  finite_math.ref
test/ThreadSafety/: const_cast.ref  const_cast_away.ref  global_static.cpp  global_static.ref  mutable_member.cpp  mutable_member.ref  static_local.cpp  static_local.ref
